@@ -53,6 +53,46 @@
 					<string>2.0</string>
 				</dict>
 			</dict>
+			<key>ToOneRelationships</key>
+			<dict>
+				<key>currentTerminal</key>
+				<dict>
+					<key>English.lproj</key>
+					<dict>
+						<key>description</key>
+						<string>currently active terminal</string>
+						<key>humanReadableName</key>
+						<string>current terminal</string>
+						<key>number</key>
+						<string>singular</string>
+						<key>sex</key>
+						<string>none</string>
+					</dict>
+					<key>appleEventCode</key>
+					<string>Ctrm</string>
+					<key>codeGenDict</key>
+					<dict>
+						<key>callDidChange</key>
+						<true/>
+						<key>callUndoManager</key>
+						<true/>
+						<key>implementAccessors</key>
+						<true/>
+						<key>implementAsPrimitive</key>
+						<false/>
+						<key>pbType</key>
+						<string>PseudoTerminal</string>
+					</dict>
+					<key>presentationOrder</key>
+					<integer>0</integer>
+					<key>readOnly</key>
+					<string>NO</string>
+					<key>type</key>
+					<string>PseudoTerminal</string>
+					<key>xmlEncodingVersion</key>
+					<string>2.0</string>
+				</dict>
+			</dict>
 			<key>appleEventCode</key>
 			<string>capp</string>
 			<key>codeGenDict</key>
@@ -658,6 +698,19 @@
 					<string>handleLaunchScriptCommand:</string>
 					<key>name</key>
 					<string>launch</string>
+					<key>presentationOrder</key>
+					<integer>1</integer>
+					<key>xmlEncodingVersion</key>
+					<string>2.0</string>
+				</dict>
+				<key>select</key>
+				<dict>
+					<key>English.lproj</key>
+					<dict/>
+					<key>methodName</key>
+					<string>handleSelectScriptCommand:</string>
+					<key>name</key>
+					<string>select</string>
 					<key>presentationOrder</key>
 					<integer>0</integer>
 					<key>xmlEncodingVersion</key>
